--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,3 +104,31 @@ button.cta img{
     padding-right: 7px;
 }
 
+@media only screen and (max-width: 375px){
+    .container{
+        margin: 15px auto;
+        padding: 0 15px;
+    }
+    .img img{
+        max-height: 290px;
+    }
+    .card-content{
+        padding: 24px;
+    }
+    h6.pro-cat, h2.pro-name,p.pro-des,price{
+        padding-bottom: 16px;
+    }
+    h2.pro-name{
+        font-size: 28px;
+    }
+    p.pro-des{
+        font-size: 12px; 
+    }
+    p.current-price{
+        font-size: 23px;
+    }
+    button.cta{
+        padding: 12px 0;
+        font-size: 13px;
+    }
+}
